# IADS

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
classif/: __init__.py  adaline.py  base.py  decisiontree.py  kernelperceptron.py  knn.py  multioaa.py  multiooa.py  perceptron.py
src/classif/: base.py  knn.py  perceptron.py
src/utils/: utils.py
utils/: evaluation.py  utils.py
